--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 canvas{
-    background-color: #87CEEB;
+    position: absolute;
+    background-color: #000000;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
