--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 canvas{
     position: absolute;
-    background-color: #000000;
+    /* background-color: #000000; */
     margin: auto;
     left: 0;
     right: 0;
